--- a/backend/app/pyproject.toml
+++ b/backend/app/pyproject.toml
@@ -20,6 +20,10 @@ python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 psycopg2-binary = "^2.9.4"
 gunicorn = "^20.1.0"
 loguru = "^0.6.0"
+matplotlib = "^3.7.1"
+numpy = "^1.24.2"
+pandas = "^1.5.3"
+missingno = "^0.5.2"
 
 [tool.poetry.dev-dependencies]
 black = "^22.10.0"
