--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,11 @@
     "@types/jest": "^25.2.3",
     "@types/react-dom": "^18.0.6",
     "apexcharts": "^3.35.2",
+    "axios": "^1.3.5",
     "framer-motion": "^4.1.17",
     "next": "^12.2.5",
     "react": "^17.0.2",
+    "react-advanced-gauge-chart": "^1.0.0",
     "react-apexcharts": "^1.4.0",
     "react-calendar": "^3.7.0",
     "react-custom-scrollbars-2": "^4.2.1",
@@ -29,6 +31,7 @@
     "react-table": "^7.8.0",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "2.0.2",
+    "swr": "^2.1.2",
     "typescript": "^4.7.4",
     "web-vitals": "^1.1.2"
   },
@@ -41,7 +44,11 @@
     "deploy": "gh-pages -d build"
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
