--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,15 +14,18 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^25.2.3",
+    "@types/react-csv": "^1.1.3",
     "@types/react-dom": "^18.0.6",
     "apexcharts": "^3.35.2",
     "axios": "^1.3.5",
+    "file-saver": "^2.0.5",
     "framer-motion": "^4.1.17",
     "next": "^12.2.5",
     "react": "^17.0.2",
     "react-advanced-gauge-chart": "^1.0.0",
     "react-apexcharts": "^1.4.0",
     "react-calendar": "^3.7.0",
+    "react-csv": "^2.2.2",
     "react-custom-scrollbars-2": "^4.2.1",
     "react-dom": "17.0.2",
     "react-dropzone": "^12.0.4",
