feat: Completed auth login and sign up process

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,1 +1,4 @@
 NEXT_PUBLIC_DEV_BACKEND_URL=http://localhost:8001/api/v1
+GOOGLE_ID=902574766985-gfaubegeljp8p07ituu3v68o1g8mm8dc.apps.googleusercontent.com
+GOOGLE_SECRET=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
+JWT_SECRET=TEST_SECRET_DO_NOT_USE_IN_PROD
