--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,4 @@
 NEXT_PUBLIC_PROD_BACKEND_URL=http://localhost:8001/api/v1
+GOOGLE_ID=902574766985-gfaubegeljp8p07ituu3v68o1g8mm8dc.apps.googleusercontent.com
+GOOGLE_SECRET=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
+JWT_SECRET=45358c6729fcbb296014e18be502b05c
