--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,13 @@
     "@types/jest": "^25.2.3",
     "@types/react-csv": "^1.1.3",
     "@types/react-dom": "^18.0.6",
+    "@types/validator": "^13.7.17",
     "apexcharts": "^3.35.2",
     "axios": "^1.3.5",
     "file-saver": "^2.0.5",
     "framer-motion": "^4.1.17",
     "next": "^12.2.5",
+    "next-auth": "^4.22.1",
     "react": "^17.0.2",
     "react-advanced-gauge-chart": "^1.0.0",
     "react-apexcharts": "^1.4.0",
@@ -32,10 +34,12 @@
     "react-icons": "^4.3.1",
     "react-is": "^18.0.0",
     "react-table": "^7.8.0",
+    "react-toastify": "^9.1.3",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "2.0.2",
     "swr": "^2.1.2",
     "typescript": "^4.7.4",
+    "validator": "^13.9.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
