--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -22,6 +22,14 @@ services:
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=app
 
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
+      - PGADMIN_DEFAULT_PASSWORD=root
+    ports:
+      - "8080:80"
+
   backend:
     build:
       context: ./backend
